feat(search): full-text content search with SQLite FTS5 + async content extraction (text, PDFs, OCR for images); faster initial indexing via background content indexer; optional OCR toggle used for indexing too

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
   "tomli>=2.0; python_version<'3.11'",
   "pytesseract>=0.3.13; platform_system == 'Windows' or platform_system == 'Linux' or platform_system == 'Darwin'",
   "Pillow>=10.0",
+  "pypdf>=4.2",
 ]
 
 [project.scripts]
